# dok2any

./: .gitignore  LICENSE  README.md  meta.yaml  pyproject.toml  setup.cfg  setup.py
conda/dok2any/: bckp-meta.yaml  meta.yaml
data/converted_files/: ligand01.mol2  ligand01.sdf  ligand02.sdf
data/dok_files/: ligand01.dok  ligand02.dok
dok2any/: converter.py
dok2any.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
