[metadata]
name = dok2any
version = 0.0.6
author = Dulaj Ramanayaka
author_email = dulajnr97git@gmail.com
description = Convert DOK files to various chemical structure formats using Open Babel.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dulaanr97/dok2any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires =
    openbabel-wheel

[options.entry_points]
console_scripts =
    dok2any = dok2any.converter:main

[options.package_data]
* = README.md, LICENSE

[options.extras_require]
testing =
    pytest
    pytest-cov
